...
                Image.asset(
                  'images/upm_logo.jpg', // Replace with your logo image asset path
                  width: 175, // Adjust as needed
                  height: 175, // Adjust as needed
                ),
                const Text(
                  'Welcome !',
                  style: TextStyle(
                    fontSize: 60.0,
                    fontWeight: FontWeight.bold,
                  ),
                ),
              ],
...
                                  builder: (BuildContext context) =>
                                      const OtpPage(),
                                ),
                              );
                            }
                          : null,
                      child: const Text('Get Activation Code'),
                    ),
                  ],
                ),
              ),
            ),
          ),
...
                    // Label with image to the right
                    Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Flexible(
                          child: Text(
                            'Enter the activation code you received via SMS.',
                            textAlign: TextAlign.start,
                            style: TextStyle(
                              fontSize: 25.0,
                            ),
                          ),
                        ),
...
                          MaterialPageRoute(
                            builder: (BuildContext context) =>
                                const DashboardPage(),
                          ),
                        );
                      },
                      child: const Text('Activate'),
                    ),
                  ],
                ),
              ),
            ),
          ),
...
